e46/allow-red-to-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: blue
  name: allow-red-to-web
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:   
          matchLabels:
            kubernetes.io/metadata.name: red
