e46/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: blue
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
